Bug 391305 - uncaught error when adding new investment transaction
Summary: uncaught error when adding new investment transaction
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-02 16:44 UTC by Dave Nelson
Modified: 2018-03-03 11:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dave Nelson 2018-03-02 16:44:37 UTC
Version 5.0.80-6676cec5

in investment acct ledger trying to add a transaction

case 1:
click on New, crash before uncaught error popup display completed

case 2:
duplicate old txn, crashes when clicking on Edit, uncaught error pops up, details are blank
Comment 1 Thomas Baumgart 2018-03-03 11:57:21 UTC
Git commit 6375a730aea16afdc377424f3619562251846bb4 by Thomas Baumgart.
Committed on 03/03/2018 at 11:56.
Pushed by tbaumgart into branch 'master'.

Catch exception returned by accountByName()

M  +5    -1    kmymoney/mymoney/mymoneyfile.cpp

https://commits.kde.org/kmymoney/6375a730aea16afdc377424f3619562251846bb4