Catch exception returned by accountByName()

BUG: 391305